fixed menu overflow issue

--- a/ccnavmenus/force-app/main/default/staticresources/navMenu.css
+++ b/ccnavmenus/force-app/main/default/staticresources/navMenu.css
@@ -76,7 +76,7 @@ a.menuLink {
     padding-left: 5rem;
 }
 
-@media (max-width: 500px)
+@media (max-width: 499px)
 {
     .horizontal-menu c-tree-item[role="tree"] > c-tree-item[role="treeitem"] {
         display: block;
